Backport for Minecraft 1.15.2